@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<linker>
+	<assembly fullname="System.Core">
+		<type fullname="System.Action" preserve="all" />
+		<type fullname="System.Action`1" preserve="all" />
+		<type fullname="System.Action`2" preserve="all" />
+		<type fullname="System.Action`3" preserve="all" />
+		<type fullname="System.Func`1" preserve="all" />
+		<type fullname="System.Func`2" preserve="all" />
+		<type fullname="System.Func`3" preserve="all" />
+		<type fullname="System.Func`4" preserve="all" />
+	</assembly>
+</linker>
